--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,16 @@
 header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 16px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    width: 100%;
+}
+
+nav {
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+.header-action {
+    margin-left: auto;
 }
