--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,19 @@
     max-width: 1280px;
     padding: 16px;
 }
+
+.sz-m {
+    max-width: 800px;
+}
+
+.sz-s {
+    max-width: 600px;
+}
+
+.sz-ss {
+    max-width:400px;
+}
+
+.bg-whitesmoke {
+    background-color: #f5f5f5;
+}
