--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,10 +1,33 @@
-.content-section {
+.content-block {
     display: flex;
+    align-items: center;
+    padding:16px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    background-color: #ffffff;
+    justify-content: space-around;
+    border-bottom: solid;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, .25);
+}
+
+.content-block--horizontal {
     flex-direction: row;
 }
 
+.content-block--vertical {
+    flex-direction: column;
+}
+
+.content-block__newsletter-form {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    align-items: center;
+}
+
 @media screen and (max-width: 700px) {
-    .content-section {
+    .content-block--horizontal {
         flex-direction: column;
     }
 }
