--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,11 @@
 header {
     display: flex;
     align-items: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding: 16px;
     width: 100%;
+    border-bottom: solid;
+    border-width: 1px;
+    border-color: rgba(0,0,0,.15);
 }
 
 nav {
